[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psutil>=7.1.0",
    "pytelegrambotapi>=4.29.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
    "python-telegram-bot>=20.7",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "pyrogram>=2.0.0",
    "tgcrypto>=1.2.0",
]
