[project]
name = "telegram-backup-bot"
version = "1.0.0"
description = "Telegram Media Backup Bot with Flask Dashboard"
requires-python = ">=3.11"
dependencies = [
    "psutil>=7.1.0",
    "pytelegrambotapi>=4.29.1",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=20.7",
    "flask>=3.0.0",
    "pyrogram>=2.0.0",
    "tgcrypto>=1.2.0",
]
